# erpr

./: .env  .gitignore  Cargo.toml  Dockerfile  elect build.rs Cargo.lock Cargo.toml configuration Dockerfile LICENSE migrations public scripts sqlx-data.json src target tests from productos where marca_id=591  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml  production.yaml.old
migrations/: 20221019213300_crea_database.sql  20221019213308_crea_tabla_usuarios.sql  20221109205726_crea_tabla_capitulos.sql  20221109205727_crea_tabla_categorias.sql  20221109205728_crea_tabla_paises.sql  20221109205729_crea_tabla_unidades.sql  20221109205730_crea_tabla_marcas.sql  20221109205731_crea_tabla_fabricas.sql  20221109205732_crea_tabla_productos.sql  20221109205733_crea_tabla_empresas.sql  20221212181105_crea_tabla_sucursales.sql  20221216183851_crea_tabla_catalogos.sql  20221217183953_crea_tabla_precios.sql  20221221181105_crea_tabla_sucursales.sql  20221222181541_crea_tabla_inventarios.sql  20221226112752_crea_tabla_inventariados.sql  20221228150118_crea_tabla_clientes.sql  20221229173210_crea_tabla_puestos.sql  20221229185752_crea_tabla_medios.sql  20221229192447_crea_tabla_ventas.sql  20230102162751_crea_tabla_vendidos.sql  20230130183238_crea_tabla_distribuidoras.sql  20230130192625_crea_tabla_compras.sql  20230130193844_crea_tabla_comprados.sql  20230131104108_crea_tabla_vendedores.sql
public/: index.html
public/css/: form-helper.css  form.css  helper.css  home.css  lista.css  login.css  maedet.css  maestro-detalle.css  menu.css  ve.css
public/js/: form.js  form_cambia.js  lista.js  paginado.js  popup.js  ve.js
scripts/: backup_tabla.sh  cambia-objeto.sh  i1  init_db.sh  init_db_dev.sh  init_db_prod.sh  init_vars_dev.sh  init_vars_prod.sh  init_vars_prod.sh.old  init_vars_pru.sh  start_db_prod.sh  startup.mod  startup.mod.vi  startup.vi  triggers.mod.vi
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: capitulo_descripcion.rs  capitulo_nombre.rs  capitulo_nuevo.rs  categoria_nombre.rs  categoria_nuevo.rs  marca_nombre.rs  marca_nuevo.rs  mod.rs  pais_nombre.rs  pais_nuevo.rs  pais_sigla.rs  unidad_nombre.rs  unidad_nuevo.rs  unidad_sigla.rs  usuario_apellido.rs  usuario_documento.rs  usuario_email.rs  usuario_nombre.rs  usuario_nuevo.rs
src/layout/: errmsg.rs  form.rs  lista.rs  lista_paginada.rs  menu.rs  mod.rs  principal.rs
src/modelo/: capitulo.rs  marca.rs  (+5 more)
tests/: home.rs
(+410 files in other folders)
