[package]
name = "erpr"
version = "0.1.0"
authors = ["fyaniquez <fyaniquez@gmail.com>"]
edition = "2021"

[lib]
path= "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "erpr"

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0.0"
anyhow = "1.0.65"
config ={ version = "0.13.2", default-features = false, features = ["yaml"] }
maud = { version = "0.24.0", features = ["actix-web"] }
serde = { version = "1.0.145", features = ["derive"] }
serde-aux = "4.0.0"
serde_derive = "1.0.145"
static-files = "0.2.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
env_logger = "0.9.1"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.1"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
claim = "0.5.0"
thiserror = "1.0.37"
serde_json = "1.0.89"
actix-files = "0.6.2"

[dependencies.sqlx]
version = "0.6" 
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate", 
    "offline"
]

[build-dependencies]
static-files = "0.2.3"

[dev-dependencies]
reqwest = "0.11.12"
once_cell = "1.15.0"

#serde = "1.0.145"
#
#log = "0.4.17"
#tracing = "0.1.36"
#tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
#tracing-bunyan-formatter = "0.3"
#tracing-log = "0.1.3"
#thiserror = "1.0.37"
#
#serde-aux = "4"
#
#rand = "0.8.5"
#anyhow = "1.0.65"
#
#argon2 = { version = "0.4", features = ["std"] }
#
#tracing-actix-web = "0.6"
#secrecy = { version = "0.8.0", features = ["serde"] }
#actix-web-flash-messages = { version = "0.4.1", features = ["cookies"] }
#actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
#serde_json = "1.0.85"
#actix-web-lab = "0.18.2"
#
#[dev-dependencies]
#once_cell = "1.7.2"
#claim = "0.5.0"
#quickcheck = "0.9.2"
#quickcheck_macros = "0.9.1"
#fake = "~2.3.0"
#wiremock = "0.5"
#serde_json = "1.0.61"
#linkify = "0.8.0"
#serde_urlencoded = "0.7.1"
